@@ -1,5 +1,6 @@
 package com.zzl.myblog.controller.api;
 
+import com.zzl.myblog.dto.ApiResponseDTO;
 import com.zzl.myblog.dto.ProjectDesignDTO;
 import com.zzl.myblog.dto.ProjectDesignResponseDTO;
 import com.zzl.myblog.entity.ProjectDesign;
@@ -7,12 +8,10 @@ import com.zzl.myblog.service.ProjectDesignService;
 import jakarta.validation.Valid;
 import jakarta.validation.constraints.NotNull;
 import lombok.RequiredArgsConstructor;
-import org.springframework.http.ResponseEntity;
 import org.springframework.validation.annotation.Validated;
 import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/api/projects/design")
@@ -22,60 +21,44 @@ public class ProjectDesignController {
 
     private final ProjectDesignService projectDesignService;
 
-    /**
-     * 查询某个项目的 全部设计思路
-     */
     @GetMapping("/{projectId}")
-    public ResponseEntity<List<ProjectDesignResponseDTO>> getByProjectId(
+    public ApiResponseDTO<List<ProjectDesignResponseDTO>> getByProjectId(
             @NotNull(message = "项目不能为空") @PathVariable Long projectId
     ) {
         List<ProjectDesign> list = projectDesignService.getByProjectId(projectId);
         List<ProjectDesignResponseDTO> result = list.stream()
                 .map(ProjectDesignResponseDTO::fromEntity)
-                .collect(Collectors.toList());
-        return ResponseEntity.ok(result);
+                .toList();
+        return ApiResponseDTO.success(result);
     }
 
-    /**
-     * 单条 添加设计思路
-     */
     @PostMapping
-    public ResponseEntity<Void> add(@Valid @RequestBody ProjectDesignDTO dto) {
+    public ApiResponseDTO<Void> add(@Valid @RequestBody ProjectDesignDTO dto) {
         ProjectDesign design = new ProjectDesign();
-        design.setId(dto.getId());
         design.setProjectId(dto.getProjectId());
         design.setTitle(dto.getTitle());
         design.setContent(dto.getContent());
         design.setSort(dto.getSort());
-
         projectDesignService.addProjectDesign(design);
-        return ResponseEntity.ok().build();
+        return ApiResponseDTO.success();
     }
 
-    /**
-     * 删除单条设计思路（根据 id）
-     */
     @DeleteMapping("/item/{id}")
-    public ResponseEntity<Void> deleteById(@NotNull(message = "设计思路id不能为空") @PathVariable Long id) {
+    public ApiResponseDTO<Void> deleteById(
+            @NotNull(message = "设计思路id不能为空") @PathVariable Long id) {
         projectDesignService.deleteById(id);
-        return ResponseEntity.noContent().build();
+        return ApiResponseDTO.success();
     }
 
-    /**
-     * 删除某个项目的 全部设计思路
-     */
     @DeleteMapping("/project/{projectId}")
-    public ResponseEntity<Void> deleteByProjectId(@NotNull(message = "项目id不能为空") @PathVariable Long projectId) {
+    public ApiResponseDTO<Void> deleteByProjectId(
+            @NotNull(message = "项目id不能为空") @PathVariable Long projectId) {
         projectDesignService.deleteByProjectId(projectId);
-        return ResponseEntity.noContent().build();
+        return ApiResponseDTO.success();
     }
 
-    /**
-     * 【核心】更新项目设计思路
-     * 先删全部 → 再批量插入
-     */
     @PutMapping("/{projectId}")
-    public ResponseEntity<Void> updateProjectDesign(
+    public ApiResponseDTO<Void> updateProjectDesign(
             @PathVariable @NotNull(message="项目id不能空") Long projectId,
             @RequestBody List<ProjectDesignDTO> dtoList
     ) {
@@ -86,9 +69,8 @@ public class ProjectDesignController {
             design.setContent(dto.getContent());
             design.setSort(dto.getSort());
             return design;
-        }).collect(Collectors.toList());
-
+        }).toList();
         projectDesignService.updateProjectDesign(projectId, designList);
-        return ResponseEntity.ok().build();
+        return ApiResponseDTO.success();
     }
 }
