@@ -1,22 +1,20 @@
 package com.zzl.myblog.controller.api;
 
+import com.zzl.myblog.dto.ApiResponseDTO;
 import com.zzl.myblog.dto.TechDTO;
 import com.zzl.myblog.dto.TechResponseDTO;
 import com.zzl.myblog.entity.Tech;
+import com.zzl.myblog.exception.ResourceNotFoundException;
 import com.zzl.myblog.service.TechService;
 import jakarta.validation.Valid;
 import jakarta.validation.constraints.NotBlank;
 import jakarta.validation.constraints.NotEmpty;
 import jakarta.validation.constraints.NotNull;
 import lombok.RequiredArgsConstructor;
-import org.springframework.http.HttpStatus;
-import org.springframework.http.ResponseEntity;
 import org.springframework.validation.annotation.Validated;
 import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
-import java.util.Optional;
-import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/api/techs")
@@ -26,100 +24,69 @@ public class TechController {
 
     private final TechService techService;
 
-    /**
-     * 获取所有技术标签
-     * GET /api/techs
-     */
     @GetMapping
-    public ResponseEntity<List<TechResponseDTO>> getAllTechs() {
+    public ApiResponseDTO<List<TechResponseDTO>> getAllTechs() {
         List<Tech> techs = techService.getAllTechs();
         List<TechResponseDTO> responseDTOs = techs.stream()
                 .map(TechResponseDTO::fromEntity)
-                .collect(Collectors.toList());
-        return ResponseEntity.ok(responseDTOs);
+                .toList();
+        return ApiResponseDTO.success(responseDTOs);
     }
 
-    /**
-     * 根据ID获取单个技术标签
-     * GET /api/techs/{id}
-     */
     @GetMapping("/{id}")
-    public ResponseEntity<TechResponseDTO> getTechById(@PathVariable @NotNull(message="标签id不能为空") Long id) {
-        Optional<Tech> techOpt = techService.getTechById(id);
-        if (techOpt.isEmpty()) {
-            return ResponseEntity.notFound().build();
-        }
-        return ResponseEntity.ok(TechResponseDTO.fromEntity(techOpt.get()));
+    public ApiResponseDTO<TechResponseDTO> getTechById(
+            @PathVariable @NotNull(message="标签id不能为空") Long id) {
+        Tech tech = techService.getTechById(id)
+                .orElseThrow(() -> new ResourceNotFoundException("技术标签不存在"));
+        return ApiResponseDTO.success(TechResponseDTO.fromEntity(tech));
     }
 
-    /**
-     * 根据项目ID获取该项目关联的所有技术标签
-     * GET /api/techs/project/{projectId}
-     */
     @GetMapping("/project/{projectId}")
-    public ResponseEntity<List<TechResponseDTO>> getAllTechsByProjectId(@PathVariable @NotNull(message = "项目id不能为空") Long projectId) {
+    public ApiResponseDTO<List<TechResponseDTO>> getAllTechsByProjectId(
+            @PathVariable @NotNull(message = "项目id不能为空") Long projectId) {
         List<Tech> techs = techService.getTechsByProjectId(projectId);
         List<TechResponseDTO> responseDTOs = techs.stream()
                 .map(TechResponseDTO::fromEntity)
-                .collect(Collectors.toList());
-        return ResponseEntity.ok(responseDTOs);
+                .toList();
+        return ApiResponseDTO.success(responseDTOs);
     }
 
-    /**
-     * 根据分类获取技术标签
-     * GET /api/techs/category/{category}
-     */
     @GetMapping("/category/{category}")
-    public ResponseEntity<List<TechResponseDTO>> getTechsByCategory(@PathVariable @NotBlank(message = "标签类型不能为空") String category) {
+    public ApiResponseDTO<List<TechResponseDTO>> getTechsByCategory(
+            @PathVariable @NotBlank(message = "标签类型不能为空") String category) {
         List<Tech> techs = techService.getTechsByCategory(category);
         List<TechResponseDTO> responseDTOs = techs.stream()
                 .map(TechResponseDTO::fromEntity)
-                .collect(Collectors.toList());
-        return ResponseEntity.ok(responseDTOs);
+                .toList();
+        return ApiResponseDTO.success(responseDTOs);
     }
 
-
-    /**
-     * 根据名称获取技术标签
-     * GET /api/techs/name/{name}
-     */
     @GetMapping("/name/{name}")
-    public ResponseEntity<TechResponseDTO> getTechByName(@PathVariable @NotBlank(message = "标签名称不能为空") String name) {
-        Optional<Tech> techOpt = techService.getTechByName(name);
-        if (techOpt.isEmpty()) {
-            return ResponseEntity.notFound().build();
-        }
-        return ResponseEntity.ok(TechResponseDTO.fromEntity(techOpt.get()));
+    public ApiResponseDTO<TechResponseDTO> getTechByName(
+            @PathVariable @NotBlank(message = "标签名称不能为空") String name) {
+        Tech tech = techService.getTechByName(name)
+                .orElseThrow(() -> new ResourceNotFoundException("标签不存在"));
+        return ApiResponseDTO.success(TechResponseDTO.fromEntity(tech));
     }
 
-    /**
-     * 创建新技术标签
-     * POST /api/techs
-     */
     @PostMapping
-    public ResponseEntity<TechResponseDTO> createTech(@Valid @RequestBody TechDTO techDTO) {
-        // 将 DTO 转换为 Entity
+    public ApiResponseDTO<TechResponseDTO> createTech(@Valid @RequestBody TechDTO techDTO) {
         Tech tech = new Tech();
         tech.setName(techDTO.getName());
         tech.setCategory(techDTO.getCategory());
         tech.setIcon(techDTO.getIcon());
-
         Tech createdTech = techService.createTech(tech);
-
-        return ResponseEntity.status(HttpStatus.CREATED).body(TechResponseDTO.fromEntity(createdTech));
+        return ApiResponseDTO.success(TechResponseDTO.fromEntity(createdTech));
     }
 
-
-    /**
-     * 批量创建或获取技术标签（用于项目创建时）
-     * POST /api/techs/batch
-     */
     @PostMapping("/batch")
-    public ResponseEntity<List<TechResponseDTO>> createTechsIfNotExist(@RequestBody  @NotEmpty(message = "技术名称列表不能为空") List<@NotBlank(message = "技术名称不能为空") String> techNames) {
+    public ApiResponseDTO<List<TechResponseDTO>> createTechsIfNotExist(
+            @RequestBody @NotEmpty(message = "技术名称列表不能为空")
+            List<@NotBlank(message = "技术名称不能为空") String> techNames) {
         List<Tech> techs = techService.createTechsIfNotExist(techNames);
         List<TechResponseDTO> responseDTOs = techs.stream()
                 .map(TechResponseDTO::fromEntity)
-                .collect(Collectors.toList());
-        return ResponseEntity.ok(responseDTOs);
+                .toList();
+        return ApiResponseDTO.success(responseDTOs);
     }
 }
